JWT 토큰 생성, JWT 토큰 검증 API 초안 작성
